--- a/Macri-Salvador-IB/index.html
+++ b/Macri-Salvador-IB/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lan="en">
     <head>
+        <title>importadossm.html</title>
         <link rel="stylesheet" type="text/css" href="pruebaestilo.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
         <meta charset="UTF-8">
